--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+ALGOLIA_APP_ID=APPID
+ALGOLIA_KEY=KEY
+
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
