Refactored main template name to public.blade.php

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,11 @@ DB_PASSWORD=secret
 ALGOLIA_APP_ID=APPID
 ALGOLIA_KEY=KEY
 
+PUSHER_KEY=KEY
+PUSHER_SECRET=SECRET
+PUSHER_APP_ID=APPID
+PUSHER_APP_ID=APPID
+
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
