Refactoring of resources, better organization of main template file

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-  "/js/main.js": "/js/main.js",
-  "/css/public.css": "/css/public.css"
+  "/js/libs.js": "/js/libs.ab5263a45f4129a79205.js",
+  "/css/public.css": "/css/public.18a8d7b7d1615ec0071d23dcea1bc519.css"
 }
